<resources xmlns:tools="http://schemas.android.com/tools"
           tools:ignore="MissingTranslation">
    <string name="systemError">系统正忙,请稍后重试.......</string>
    <string name="app_name">校园微生活</string>
    <string name="save">保存</string>
    <string name="next">下一步</string>
    <string name="msg">消息</string>
    <string name="smallRecord">微录</string>
    <string name="smallTravel">微游</string>
    <string name="addressBook">通讯录</string>
    <string name="my">我的</string>
    <string name="lastedMsg">最新消息</string>
    <string name="campusDiary">校园日记</string>
    <string name="friendsTrend">好友动态</string>
    <string name="chatRecord">聊天记录</string>
    <string name="mySendDiary">我发布的日记</string>
    <string name="mySendTrend">我发布的最新动态</string>
    <string name="upStar">提升星级</string>
    <string name="qqHasBind">该QQ号已被绑定</string>
    <string name="weChatHasBind">该微信号已被绑定</string>
    <string name="editData">编辑资料</string>
    <string name="notPassUser">未认证用户</string>
    <string name="passUser">认证用户</string>
    <string name="space">空间</string>
    <string name="businessCard">我的名片</string>
    <string name="latestVisitor">最新访客</string>
    <string name="latestAttention">最新关注</string>
    <string name="myAttention">我的关注</string>
    <string name="myInviteBook">我的邀请函</string>
    <string name="myDrafts">我的草稿</string>
    <string name="myLetter">我的投诉</string>
    <string name="setting">设置</string>
    <string name="choiceFriend">选择好友</string>
    <string name="cancel">取消</string>
    <string name="newFriend">新朋友</string>
    <string name="scanAndScan">扫一扫</string>
    <string name="telephone">手机号</string>
    <string name="inputTelephone">请输入手机号</string>
    <string name="password">密码</string>
    <string name="inputPassword">请输入密码</string>
    <string name="login">登录</string>
    <string name="registerNewAccount">注册新账户</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="otherLoginWay">其他登录方式</string>
    <string name="weiXinLogin">微信登录</string>
    <string name="qqLogin">QQ登录</string>
    <string name="verificationCodeLogin">验证码登录</string>
    <string name="getVerificationCode">获取验证码</string>
    <string name="reGetVerificationCode">重新获取</string>
    <string name="verificationCode">验证码</string>
    <string name="inputVerification">请输入验证码</string>
    <string name="registerInputNameHint">请填写昵称便于其他用户找到您</string>
    <string name="name">名称</string>
    <string name="inputNameHint">请确保500字以内</string>
    <string name="location">所在城市</string>
    <string name="choiceLocation">选择所在城市</string>
    <string name="choiceLocation2">选择城市</string>
    <string name="sure">确定</string>
    <string name="registerPasswordHint">输入密码请输入6-20位字母或数字</string>
    <string name="affirmPassword">确认密码</string>
    <string name="inputPasswordHint">请输入6-20位字母或数字</string>
    <string name="affirmPasswordHint">请再次输入密码</string>
    <string name="register">注册</string>
    <string name="registerInputSchoolHint">请填写真实的学校名称便于其他用户找到您</string>
    <string name="campusName">学校名称</string>
    <string name="inputMessage">请输入用户名或密码</string>
    <string name="boy">男生</string>
    <string name="girl">女生</string>


</resources>
