<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/base_main_lyt"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorContentBg"
              android:orientation="vertical">
    <!--导入标题-->
    <include layout="@layout/common_app_bar"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_45"
        android:layout_marginTop="@dimen/dis_20"
        android:background="@drawable/top_bottom_border"
        android:paddingLeft="@dimen/margin_12">

        <TextView
            android:id="@+id/arc_city_label"
            style="@style/labelItemStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"/>

        <TextView
            android:id="@+id/arc_city_tv"
            style="@style/EditNameItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_45"
            android:layout_toRightOf="@id/arc_city_label"
            android:hint="@string/choiceLocation"
            android:maxLength="500"/>

    </RelativeLayout>
    <!--下一步-->
    <TextView
        android:id="@+id/arn_next_btn"
        style="@style/ButtonWhiteItemStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_45"
        android:text="@string/next"/>
</LinearLayout>