<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/base_main_lyt"
              android:background="@color/colorContentBg"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <!--导入标题-->
    <include layout="@layout/common_app_bar"/>

    <TextView
        android:layout_marginTop="@dimen/dis_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorTime"
        android:layout_marginLeft="@dimen/margin_12"
        android:textSize="@dimen/font_size_12"
        android:text="@string/registerPasswordHint"/>

    <LinearLayout
        android:paddingTop="@dimen/dis_0.5"
        android:layout_marginTop="@dimen/dis_20"
        android:background="@drawable/top_bottom_border"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin_12"
        android:orientation="vertical">
        <RelativeLayout
            android:background="@drawable/bottom_border"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_45">
            <TextView
                android:id="@+id/arp_input_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/labelItemStyle"
                android:text="@string/inputPassword"/>

            <EditText
                android:id="@+id/arp_input_edit"
                android:layout_toRightOf="@id/arp_input_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginRight="@dimen/margin_45"
                android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM123456789"
                android:maxLength="20"
                android:hint="@string/inputPasswordHint"
                style="@style/EditNameItemStyle"/>

            <RelativeLayout
                android:visibility="gone"
                android:paddingRight="@dimen/margin_12"
                android:id="@+id/arp_clear_input_lyt"
                android:layout_alignParentRight="true"
                android:layout_width="@dimen/dis_40"
                android:layout_height="@dimen/margin_45">
                <ImageView
                    android:layout_width="@dimen/margin_14"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_height="@dimen/margin_14"
                    android:src="@drawable/login_qingchu"/>
            </RelativeLayout>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_45">
            <TextView
                android:id="@+id/arp_affirm_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/labelItemStyle"
                android:text="@string/affirmPassword"/>

            <EditText
                android:layout_marginRight="@dimen/margin_45"
                android:id="@+id/arp_affirm_edit"
                android:layout_toRightOf="@id/arp_affirm_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:maxLength="20"
                android:hint="@string/affirmPasswordHint"
                android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM123456789"
                style="@style/EditNameItemStyle"/>
            <RelativeLayout
                android:id="@+id/arp_clear_affirm_lyt"
                android:layout_alignParentRight="true"
                android:paddingRight="@dimen/margin_12"
                android:visibility="gone"
                android:layout_width="@dimen/dis_40"
                android:layout_height="@dimen/margin_45">
                <ImageView
                    android:layout_width="@dimen/margin_14"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_height="@dimen/margin_14"
                    android:src="@drawable/login_qingchu"/>
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/arp_login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_45"
        android:text="@string/register"
        style="@style/ButtonWhiteItemStyle"/>


</LinearLayout>
